@@ -1,1 +1,3 @@
-Eliminate dependecy of fir1(ORDER,CUTOFF) in the function qmfmaker.m
+* We need to eliminate dependecy of fir1(ORDER,CUTOFF) in the function qmfmaker.m
+* We need to create datapack_from_bmp.
+* We need work with the datapack struct and not with the 3D marix.
