@@ -1,6 +1,8 @@
 ===============================================================================
 bsltl-1.0.1   Release Date: 2016-03-30   Release Manager: Fernando Pujaico R.
 ===============================================================================
+** datapack_to_bmp.m function change the type of the return value. Now is 
+   returned a datapack struct with the fields: {file, format, init, dir, nel}.
 ** datapack.m function now expand images dir with '~/', with the home path value.
 ** thsp_gaussian.m function got a new characteristic in your fourth parameter.
    Now is accepted, optionally, a graphic handler as fourth parameter; also
